--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  margin: 0;
+  background-color: #fff;
+}
+
+html,
+body {
+  height: 100%;
+}
+
 .perspective-1000 {
   perspective: 1000px;
 }
